<resources>
    <string name="app_name">EmergencyAlert</string>
    <string name="sign_up">Sign up</string>
    <string name="photo_error">Please choose an image</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back_to_login">Login</string>
    <string name="setting_up_photo">Setting up photo</string>
    <string name="input_error">Field required</string>
    <string name="password_length_error">minimum characters 8</string>
    <string name="password_matching_error">Passwords do not match</string>
    <string name="creating_account_dialog_title">Creating account</string>
    <string name="account_dialog_content">Creating your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_place">Search Place</string>
    <string name="ok">Ok</string>
    <string name="contacts"><u>Contacts : 5</u></string>
    <string name="hospital">Hospital</string>
    <string name="police">Police</string>
    <string name="fire_station">Fire station</string>
</resources>