<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:elevation="2dp"
            android:text="@string/sign_up"
            android:textColor="@color/purple_700"
            android:textSize="26sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_userDp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:civ_border_width="1dp"
            android:src="@drawable/person_icon"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txt_photo_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:visibility="gone"
            android:text="@string/photo_error"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="@string/username"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="phone no"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="number"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="@string/confirm_password"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="2dp"
            android:text="@string/sign_up"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#03A9F4"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_toLogIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:elevation="2dp"
            android:text="@string/back_to_login"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#d2d2d2"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="15dp" />

    </LinearLayout>

</ScrollView>