<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:elevation="2dp"
            android:text="@string/back_to_login"
            android:textColor="@color/purple_700"
            android:textSize="26sp"
            android:textStyle="bold" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:elevation="5dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:textColor="#FF0000"/>

        <TextView
            android:id="@+id/txt_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Forgot password?"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#FF9800"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_LogIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="2dp"
            android:text="@string/back_to_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#03A9F4"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="15dp" />

    </LinearLayout>

</ScrollView>