<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddCentreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/centrePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:adjustViewBounds="true"
            android:maxHeight="250dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_baseline_image_24"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="Emergency Centre name"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_centreName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="text"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:hint="Emergency Centre phone"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_centrePhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What type is your centre?"
            android:layout_marginTop="20dp"
            android:textColor="#99000000"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox android:id="@+id/checkbox_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hospital"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/police"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_fire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fire_station"
                android:onClick="onCheckboxClicked"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_addCentre"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:text="Add Centre"
            android:textAllCaps="false"
            android:layout_marginTop="100dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/purple_200"/>


    </LinearLayout>

</ScrollView>